# Compiler-Optimizations---CS6120

./: Cargo.toml
bril_control_flow/: Cargo.toml
bril_control_flow/src/: lib.rs
bril_util/: Cargo.toml
bril_util/src/: lib.rs
dataflow/: Cargo.toml
dataflow/src/: lib.rs  live_variables.rs  main.rs  reaching_definitions.rs  sets_util.rs
dominance/: Cargo.toml
dominance/src/: lib.rs  main.rs
local_optimizations/: Cargo.toml
local_optimizations/src/: main.rs
local_optimizations/src/lvn/: mod.rs
local_optimizations/src/tdce/: mod.rs
ssa/: Cargo.toml  test.bril
ssa/src/: lib.rs
