[package]
name = "local_optimizations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bril_control_flow = { path = "../bril_control_flow" }

[dependencies.bril-rs]
version = "0.1.0"
path = "../../bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]

